# fastParticleTrackingNNS

./: .gitignore  Makefile  pyproject.toml
notebooks/: ann_experiment.ipynb  benchmark.ipynb  benchmark_pca3d.ipynb  classification_experiment.ipynb  final_pipeline.ipynb  test.ipynb
src/hep_tracking/: ann_models.py  benchmark.py  classifiers.py  config.py  data.py  dataset.py  features.py  generate_candidates.py  models.py  pipeline.py  plots.py  utils.py
tests/: test_data.py  test_features.py  test_models.py  test_utils.py
