[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hep_tracking"
version = "0.1.0"
description = "Benchmarking kNN and ANN methods for HEP track segment building"

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "cupy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "jupyter"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]